--- a/index.html
+++ b/index.html
@@ -863,8 +863,8 @@
                 <div class="relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-1-row-1 grid-md-col-1">
                     <a href="">
                         <img class="img img-zoom" src="./assets/img/main/feature/Clothing.svg" alt="Clothing">
-                    </a>
-                    <button class="absolute left-center bottom-21 fs-16 fw-500 lh btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18 fw-md-600">Clothing</button>
+                    </a>                
+                    <button class="absolute left-center bottom-21 font-jost fs-16 fw-500 lh ls-0 va-middle btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18">Clothing</button>
                 </div>
 
                 <!-- Sunglasses -->
@@ -872,7 +872,7 @@
                     <a href="">
                         <img class="img img-zoom" src="./assets/img/main/feature/Sunglasses.svg" alt="Sunglasses">
                     </a>
-                    <button class="absolute left-center bottom-21 fs-16 fw-500 lh btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18 fw-md-600">Sunglasses</button>
+                    <button class="absolute left-center bottom-21 font-jost fs-16 fw-500 lh ls-0 va-middle btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18">Sunglasses</button>
                 </div>
 
                 <!-- Bags -->
@@ -880,7 +880,7 @@
                     <a href="">
                         <img class="img img-zoom" src="./assets/img/main/feature/Bags.svg" alt="Bags">
                     </a>
-                    <button class="absolute left-center bottom-21 fs-16 fw-500 lh btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18 fw-md-600">Bags</button>
+                    <button class="absolute left-center bottom-21 font-jost fs-16 fw-500 lh ls-0 va-middle btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18">Bags</button>
                 </div>
 
                 <!-- Sneaker -->
@@ -888,7 +888,7 @@
                     <a href="">
                         <img class="img img-zoom" src="./assets/img/main/feature/Sneaker.svg" alt="Sneaker">
                     </a>
-                    <button class="absolute left-center bottom-21 fs-16 fw-500 lh btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18 fw-md-600">Sneaker</button>
+                    <button class="absolute left-center bottom-21 font-jost fs-16 fw-500 lh ls-0 va-middle btn btn-white rounded-circle-35 px-30 py-11 bottom-xl-30 px-xl-49 py-xl-18">Sneaker</button>
                 </div>
             </div>
         </div>
