--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                             <div class="mt-10 d-flex gap-5">
                                 <div class="pt-2 px-2 border border-1 border-gray-medium rounded-circle-50 btn-color-hover">
                                     <span class="tooltip btn btn-color bg-gray-dark border rounded-circle-50 m-auto" onclick="changeImageTrending(this, 'assets/img/main/trending/1.jpg')">
-                                        <span class="z-index-50 tooltiptext tooltiptext-top tooltiptext-after-top">Gray Dark</span>
+                                        <span class="tooltiptext tooltiptext-top tooltiptext-after-top">Gray Dark</span>
                                     </span>
                                 </div>
                                 
