--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     </a>
 
                     <!-- List Home -->
-                    <div class="bg-blue list-home-pc d-none absolute top-120pct left--48pct pt-47 pb-20 pl-30 pr-55 z-index-2 bg-white">
+                    <div class="list-home-pc d-none absolute top-120pct left--48pct pt-47 pb-20 pl-30 pr-55 z-index-2 bg-white">
                         <ul>
                             <li class="d-flex align-items-center">
                                 <a class="d-block py-11 fs-16 fw-400 text-nowrap color-gray-dark hover-orange-red" href="">Main demo</a>
@@ -918,11 +918,11 @@
             </div>
 
             <!-- Products -->
-            <div class="mt-20 mt-xl-50 wrapper relative-xl">
+            <div class="mt-16 mt-xl-50 wrapper relative-xl">
                 <!-- Btn-prev/next -->
                 <div class="btn-slideshow-trending d-flex gap-11 justify-content-center mb-20 absolute-xl top-xl-40pct justify-content-xl-between w-xl-max opacity-xl-0">
-                    <div class="cursor-pointer ml-25 fs-12 lh px-16 py-13 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-trending-prev">&#10094;</div>
-                    <div class="cursor-pointer mr-25 fs-12 lh px-16 py-13 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-trending-next">&#10095;</div>
+                    <div class="btn-trending-prev w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 ml-25">&#10094;</div>
+                    <div class="btn-trending-next w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 mr-25">&#10095;</div>
                 </div>
 
                 <!-- Slideshow -->
@@ -1559,11 +1559,11 @@
             </div>
 
             <!-- Products -->
-            <div class="mt-20 mt-xl-32 wrapper relative-xl">
+            <div class="mt-16 mt-xl-32 wrapper relative-xl">
                 <!-- Btn-prev/next -->
                 <div class="btn-slideshow-arrivals d-flex gap-11 justify-content-center mb-20 absolute-xl top-xl-40pct justify-content-xl-between w-xl-max opacity-xl-0">
-                    <div class="cursor-pointer ml-25 fs-12 lh px-16 py-13 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-arrivals-prev">&#10094;</div>
-                    <div class="cursor-pointer mr-25 fs-12 lh px-16 py-13 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-arrivals-next">&#10095;</div>
+                    <div class="btn-arrivals-prev w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 ml-25">&#10094;</div>
+                    <div class="btn-arrivals-next w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 mr-25">&#10095;</div>
                 </div>
 
                 <!-- Slideshow -->
@@ -2151,11 +2151,11 @@
             </div>
 
             <!-- feedback -->
-            <div class="wrapper mt-19 mt-xl-45 relative-xl">
+            <div class="wrapper mt-15 mt-xl-45 relative-xl">
                 <!-- Btn-prev/next -->
                 <div class="btn-slideshow-feedback d-flex gap-11 justify-content-center absolute-xl top-xl-center justify-content-xl-between w-xl-max opacity-xl-0">
-                    <div class="ml-25 cursor-pointer fs-12 lh px-16 py-12 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-feedback-prev">&#10094;</div>
-                    <div class="mr-25 cursor-pointer fs-12 lh px-16 py-12 border rounded-circle-50 border-1 border-gray-lighter bg-white z-index-xl-6 btn-feedback-next">&#10095;</div>
+                    <div class="btn-feedback-prev w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 ml-25">&#10094;</div>
+                    <div class="btn-feedback-next w-40 h-40 border border-1 rounded-circle-50 border-gray-lighter bg-white d-flex justify-content-center align-items-center cursor-pointer z-index-xl-6 mr-25">&#10095;</div>
                 </div>
 
                 <!-- slideshow -->
@@ -2472,7 +2472,7 @@
    </main>
 
    <!-- Footer -->
-   <footer class="pb-33 px-20 mt-59 mt-xl-42 width-xxl-141 mx-auto">
+   <footer class="pb-30 px-20 mt-59 mt-xl-42 width-xxl-141 mx-auto">
         <div class="pb-xl-65 mt-xl-10 d-md-flex flex-md-wrap border-bottom border-1 border-gray-lighter"> 
             <!-- About -->
             <div class="box-border col-md-2 col-xl-4-33pct mb-30">
@@ -2641,7 +2641,7 @@
         </div>
     
         <!-- Copyright -->
-        <div class="mt-35 d-flex gap-17 flex-wrap justify-content-center justify-content-md-between">
+        <div class="mt-35 d-flex gap-17 flex-wrap justify-content-center align-items-center justify-content-md-between">
             <div class="box-border d-flex gap-20 mx-auto mx-lg-0">
                 <a class="text-nowrap fs-16 fw-400 mr-16" href="">
                     English
@@ -2704,7 +2704,7 @@
    </div>
    
    <!-- Sticky -->
-   <div class="sticky-bottom d-lg-none z-index-50 d-flex bg-white px-45 pt-15 pb-28 sticky bottom-0">
+   <div class="sticky-bottom d-lg-none z-index-50 d-flex bg-white px-45 pt-15 pb-30 sticky bottom-0">
         <div class="mr-11 d-flex flex-direction-column align-items-center gap-1">
             <span>
                 <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
