--- a/index.html
+++ b/index.html
@@ -429,14 +429,14 @@
         </div>
 
         <!-- Logo -->
-        <div class="box-border col-lg-25pct col-33pct d-flex justify-content-center justify-content-lg-start">
+        <div class="box-border col-lg-20pct col-33pct d-flex justify-content-center justify-content-lg-start">
             <a href="#">
                <img class="d-block" src="assets/img/header/Logo.svg" alt="Logo">
             </a>
         </div>
 
         <!-- Menu Desktop -->
-        <div class="box-border col-lg-50pct d-none d-lg-block">
+        <div class="box-border col-lg-60pct d-none d-lg-block">
             <ul class="d-flex justify-content-between justify-content-xxl-center gap-xxl-31">
                 <!-- Home -->
                 <li class="mr-xxl-2 relative wrapper-menu-pc">
@@ -445,7 +445,7 @@
                     </a>
 
                     <!-- List Home -->
-                    <div class="list-home-pc d-none absolute top-120pct left--48pct pt-47 pb-20 pl-30 pr-55 z-index-2 bg-white">
+                    <div class="list-home-pc absolute top-370pct left--48pct pt-47 pb-20 pl-30 pr-55 opacity-0 bg-white">
                         <ul>
                             <li class="d-flex align-items-center">
                                 <a class="d-block py-11 fs-16 fw-400 text-nowrap color-gray-dark hover-orange-red" href="#">Main demo</a>
@@ -498,7 +498,7 @@
                     </a>
 
                     <!-- List Shop -->
-                    <div class="list-shop-pc d-none absolute top-120pct left--180pct left-xl--551pct z-index-2 bg-white pt-68 pb-35 px-40">
+                    <div class="list-shop-pc absolute top-550pct top-xl-370pct left--180pct left-xl--551pct opacity-0 bg-white pt-68 pb-35 px-40">
                         <div class="d-flex gap-81 flex-wrap flex-xl-nowrap justify-content-center">
                             <!-- Layouts -->
                             <div>
@@ -636,7 +636,7 @@
         </div>
 
         <!-- Icon -->
-        <div class="box-border col-lg-25pct col-33pct d-flex justify-content-end align-items-end gap-20 gap-lg-15 pt-lg-1 gap-xxl-20">
+        <div class="box-border col-lg-20pct col-33pct d-flex justify-content-end align-items-end gap-20 gap-lg-15 pt-lg-1 gap-xxl-20">
             <a href="#">
                <img src="assets/img/header/icon/search/Search.svg" alt="Search">
             </a>
