--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
         <!-- Feature categories -->
         <div class="mt-54 mt-xl-94 px-20">
             <!-- Title -->
-            <div class="text-center">
+            <div class="text-center block-animation">
                 <h1 class="fs-36 fw-400 lh fs-xl-45">Featured Collections</h1>
                 <p class="fs-16 fw-400 lh-24 color-gray-dark mt-10 mt-xl-12">Elevate your style with our chic featured collection—where fashion meets flair effortlessly.</p>
             </div>
@@ -860,7 +860,7 @@
             <!-- Categories -->
             <div class="mt-18 mt-xl-33 mx-auto d-grid justify-content-center gap-ssm-15 gap-20 gap-xxl-30 grid-2-3 grid-md-3-2">
                 <!-- Clothing -->
-                <div class="relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-1-row-1 grid-md-col-1">
+                <div class="block-animation relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-1-row-1 grid-md-col-1">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/feature/clothing.jpg" alt="Clothing">
                     </a>                
@@ -868,7 +868,7 @@
                 </div>
 
                 <!-- Sunglasses -->
-                <div class="relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-1-row-2 grid-md-col-2-row-1">
+                <div class="block-animation relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-1-row-2 grid-md-col-2-row-1">
                     <a href="#">
                         <img class="img img-zoom" src="./assets/img/main/feature/sunglasses.jpg" alt="Sunglasses">
                     </a>
@@ -876,7 +876,7 @@
                 </div>
 
                 <!-- Bags -->
-                <div class="relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-2-row-1 grid-md-col-2-row-2">
+                <div class="block-animation relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-2-row-1 grid-md-col-2-row-2">
                     <a href="#">
                         <img class="img img-zoom" src="./assets/img/main/feature/bags.jpg" alt="Bags">
                     </a>
@@ -884,7 +884,7 @@
                 </div>
 
                 <!-- Sneaker -->
-                <div class="relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-2-row-2 grid-md-col-3">
+                <div class="block-animation relative wrapper-zoom overflow-hidden rounded-circle-10 grid-col-2-row-2 grid-md-col-3">
                     <a href="#">
                         <img class="img img-zoom" src="./assets/img/main/feature/sneaker.jpg" alt="Sneaker">
                     </a>
@@ -896,7 +896,7 @@
         <!-- Trending this week -->
         <div class="mt-54 mt-xl-94 px-20 width-xxl-141 mx-auto">
             <!-- Title -->
-            <div class="text-center">
+            <div class="block-animation text-center">
                 <h1 class="fs-36 fw-400 lh fs-xl-45">Trending this Week</h1>
                 <p class="fs-16 fw-400 lh-24 color-gray-dark mt-9 d-xl-none">Here’s some of our most popular products people are in love with.</p>
                 <ul class="d-none d-xl-block d-xl-flex gap-10 justify-content-center fs-14 fw-500 lh mt-43">
@@ -929,10 +929,10 @@
                 <!-- Slideshow -->
                 <div class="carousel-trending d-flex gap-20 gap-xl-30 overflow-hidden">
                     <!-- 1 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
-                            <div class="box-border relative overflow-hidden rounded-circle-10">
+                            <div class="relative overflow-hidden rounded-circle-10">
                                 <a href="#">
                                     <img class="img img-hidden productImage" src="assets/img/main/trending/1.jpg" alt="">
                                 </a>
@@ -1028,7 +1028,7 @@
                     </div>
 
                     <!-- 2 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1127,7 +1127,7 @@
                     </div>
 
                     <!-- 3 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1226,7 +1226,7 @@
                     </div>
 
                     <!-- 4 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1325,7 +1325,7 @@
                     </div>
 
                     <!-- 5 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1424,7 +1424,7 @@
                     </div>
 
                     <!-- 6 -->
-                    <div class="box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation box-border card-trending col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1575,7 +1575,7 @@
         <!-- New arrivals -->
         <div class="mt-55 mt-xl-96 px-20 width-xxl-141 mx-auto">
             <!-- Title -->
-            <div class="text-center">
+            <div class="block-animation text-center">
                 <h1 class="fs-36 fw-400 lh fs-xl-45">New Arrivals</h1>
                 <p class="fs-16 fw-400 lh-24 color-gray-dark mt-9 mt-xl-11">Here’s some of our new arrivals products people are in love with.</p>
             </div>
@@ -1591,7 +1591,7 @@
                 <!-- Slideshow -->
                 <div class="carousel-arrivals d-flex gap-20 gap-xl-30 overflow-hidden">
                     <!-- 1 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1690,7 +1690,7 @@
                     </div>
 
                     <!-- 2 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1789,7 +1789,7 @@
                     </div>
 
                     <!-- 3 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1888,7 +1888,7 @@
                     </div>
 
                     <!-- 4 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -1987,7 +1987,7 @@
                     </div>
 
                     <!-- 5 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -2086,7 +2086,7 @@
                     </div>
 
                     <!-- 6 -->
-                    <div class="card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
+                    <div class="block-animation card-arrivals col-2-gap-20 col-md-3-gap-20 col-xl-4-gap-30">
                         <!-- Img -->
                         <div class="wrapper-hidden wrapper-change relative">                           
                             <div class="relative overflow-hidden rounded-circle-10">
@@ -2188,7 +2188,7 @@
         <!-- People like -->
         <div class="px-20 mt-54 mt-xl-94 width-xxl-141 mx-auto">
             <!-- Title -->
-            <div class="text-center">
+            <div class="block-animation text-center">
                 <h1 class="fs-36 fw-400 fs-xl-45">Customer Say!</h1>
                 <p class="fs-16 fw-400 color-gray-dark lh-24 mt-10 mt-xl-12">Customers love our products and we always strive to please them all.</p>
             </div>
@@ -2413,7 +2413,7 @@
         <!-- Instagram -->
         <div class="px-20 mt-56 mt-xl-108 width-xxl-141 mx-auto">
             <!-- Title -->
-            <div class="text-center">
+            <div class="block-animation text-center">
                 <h1 class="fs-36 fw-400 fs-xl-45">Shop by Gram</h1>
                 <p class="fs-16 fw-400 color-gray-dark lh-24 mt-10 mt-xl-11 ">Inspire and let yourself be inspired, from one unique fashion to another.</p>
             </div>
@@ -2421,7 +2421,7 @@
             <!-- Slideshow -->
             <div class="carousel-ig mt-22 mt-xl-32 d-flex gap-5 overflow-hidden">
                 <!-- 1 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-1.jpg" alt="">
                     </a>
@@ -2436,7 +2436,7 @@
                 </div>
 
                 <!-- 2 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-2.jpg" alt="">
                     </a>
@@ -2451,7 +2451,7 @@
                 </div>
 
                 <!-- 3 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-3.jpg" alt="">
                     </a>
@@ -2466,7 +2466,7 @@
                 </div>
 
                 <!-- 4 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-4.jpg" alt="">
                     </a>
@@ -2481,7 +2481,7 @@
                 </div>
 
                 <!-- 5 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-5.jpg" alt="">
                     </a>
@@ -2496,7 +2496,7 @@
                 </div>
 
                 <!-- 6 -->
-                <div class="card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
+                <div class="block-animation card-ig col-2-gap-5 col-md-3-gap-5 col-xl-6-gap-5 relative wrapper-zoom overflow-hidden rounded-circle-10">
                     <a href="#">
                         <img class="img img-zoom" src="assets/img/main/ig/ig-6.jpg" alt="">
                     </a>
@@ -2517,7 +2517,7 @@
    <footer class="pb-30 px-20 mt-59 mt-xl-42 width-xxl-141 mx-auto">
         <div class="pb-xl-65 mt-xl-10 d-md-flex flex-md-wrap border-bottom border-1 border-gray-lighter"> 
             <!-- About -->
-            <div class="box-border col-md-2 col-xl-4-33pct mb-30">
+            <div class="block-animation box-border col-md-2 col-xl-4-33pct mb-30">
                 <div class="pt-md-20 mb-xl-5">
                     <img src="assets/img/header/Logo.svg" alt="">
                 </div>
@@ -2604,7 +2604,7 @@
             </div>
 
             <!-- Hot categories -->
-            <div class="box-border col-md-2 col-xl-4-17pct mt-xl-8 pl-xl-15">
+            <div class="block-animation box-border col-md-2 col-xl-4-17pct mt-xl-8 pl-xl-15">
                 <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-20 pb-18 border-top border-1 border-gray-lighter" onclick="toggleMenu('categories')">
                     <h3 class="fs-14 fw-600">
                         HOT CATEGORIES
@@ -2635,7 +2635,7 @@
             </div>
 
             <!-- Customer Service -->
-            <div class="box-border col-md-2 col-xl-4-17pct mt-xl-10 pl-xl-15">
+            <div class="block-animation box-border col-md-2 col-xl-4-17pct mt-xl-10 pl-xl-15">
                 <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-18 pb-17 border-top border-1 border-gray-lighter" onclick="toggleMenu('customer')">
                     <h3 class="fs-14 fw-600">
                         CUSTOMER SERVICE               
@@ -2669,7 +2669,7 @@
             </div>
 
             <!-- Newsletter -->
-            <div class="box-border col-md-2 col-xl-4-33pct mt-xl-10 pl-xl-15 pb-30">
+            <div class="block-animation box-border col-md-2 col-xl-4-33pct mt-xl-10 pl-xl-15 pb-30">
                 <div class="border-md-none cursor-pointer pe-md-none d-flex justify-content-between align-items-center pt-18 pb-12 border-top border-1 border-gray-lighter" onclick="toggleMenu('newsletter')">
                     <h3 class="fs-14 fw-600">
                         SIGN UP TO NEWSLETTER                
@@ -2690,7 +2690,7 @@
     
         <!-- Copyright -->
         <div class="mt-35 d-flex gap-17 flex-wrap justify-content-center align-items-center justify-content-md-between">
-            <div class="box-border d-flex gap-20 mx-auto mx-lg-0">
+            <div class="block-animation box-border d-flex gap-20 mx-auto mx-lg-0">
                 <a class="text-nowrap fs-16 fw-400 mr-16" href="#">
                     English
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
@@ -2700,10 +2700,10 @@
                     <i class="fa fa-solid fa-angle-down ml-5 fs-12 fw-400"></i>
                 </a>
             </div>
-            <div class="box-border mx-auto pr-1">
+            <div class="block-animation box-border mx-auto pr-1">
                 <p class="text-nowrap fs-16 fw-400">© 2023 Umino Store. All Rights Reserved</p>
             </div>
-            <div class="box-border d-flex gap-7 gap-ssm-2 mx-auto justify-content-xl-end ml-xl-6 mr-xl-1">
+            <div class="block-animation box-border d-flex gap-7 gap-ssm-2 mx-auto justify-content-xl-end ml-xl-6 mr-xl-1">
                 <div class="border border-1 border-gray-medium rounded-circle-5">
                     <img class="px-2 pt-2 pb-1" src="assets/img/footer/copyright/bg1.svg" alt="">
                 </div>
