--- a/index.html
+++ b/index.html
@@ -807,9 +807,9 @@
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-1.jpg" alt="Slide 1">
                     </a>
                     <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-250 left-xxl-353">
-                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Stylish<br>Top Trending</h1>
-                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
-                        <button class="font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                        <h1 class="txt-animation fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Stylish<br>Top Trending</h1>
+                        <p class="txt-animation fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="txt-animation font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
                     </div>
                 </div>
 
@@ -819,9 +819,9 @@
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-2.jpg" alt="Slide 2">
                     </a>
                     <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-250 left-xxl-353">
-                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Hulton<br>Perfect Simple</h1>
-                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
-                        <button class="font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                        <h1 class="txt-animation fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Hulton<br>Perfect Simple</h1>
+                        <p class="txt-animation fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="txt-animation font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
                     </div>
                 </div>
 
@@ -831,9 +831,9 @@
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-3.jpg" alt="Slide 3">
                     </a>
                     <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-250 left-xxl-353">
-                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Online<br>Limited Edition</h1>
-                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
-                        <button class="font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                        <h1 class="txt-animation fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Online<br>Limited Edition</h1>
+                        <p class="txt-animation fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="txt-animation font-jost fs-12 fw-600 lh ls-0 va-middle btn btn-black rounded-circle-35 px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
                     </div>
                 </div>
             </div>
